# openGL-sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glfw-3.3.2/examples/: heightmap.c
src/: main.cpp
src/camera/: Camera.h
src/glad/: glad.c
src/shaders/: Shader.cpp  Shader.h  fragment_shader.glsl  vertex_shader.glsl
